improve settings persistence for includes, excludes, and extensions with enabled flags; refactor drive selection and SearchHandle constructor